# quant-investing

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
binder/: environment.yml
book/: index.md  preface.md
book/appendix/: a-setup.md  b-math-review.md  c-data-framework.md  d-glossary.md  e-resources.md
book/part1/: 01-introduction.md  02-python-basics.md  03-numpy-pandas.md  04-finance-stats.md
book/part2/: 05-data-acquisition.md  06-fundamental-alt-data.md  07-preprocessing.md
book/part3/: 08-technical-signals.md  09-single-factor.md  10-multi-factor.md
book/part4/: 11-trend-meanrev.md  12-pairs-trading.md  13-stock-selection.md  14-asset-allocation.md
book/part5/: 15-backtest-pitfalls.md  16-event-driven-backtest.md  17-performance.md
book/part6/: 18-risk-management.md  19-ml-quant.md  20-live-trading.md
data/: README.md
data/processed/: benchmark.parquet  prices.parquet  universe.parquet
notebooks/: ch01_introduction.ipynb  ch05_data_acquisition.ipynb  ch15_backtest_pitfalls.ipynb  ch16_event_driven_backtest.ipynb
scripts/: export_notebooks.py  fetch_data.py  make_sample_data.py
src/qfin/: __init__.py  data.py  metrics.py  plotting.py  signals.py
tests/: test_smoke.py
