[project]
name = "quant-investing"
version = "0.1.0"
description = "《量化投资》开源教程 —— 面向中国本科生与研究生，从零基础到 A 股量化实战；正文用 Markdown，代码用 Jupyter Notebook，可本地执行。"
readme = "README.md"
requires-python = ">=3.11"

# 核心依赖：全书基础章节都依赖这一组，保证零基础读者一条命令装好即可跑书中示例。
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "pyarrow>=16.0",      # 读写 parquet 内置数据集
    "tqdm>=4.66",
    "openpyxl>=3.1",      # 读 Excel 财报样本
]

[project.optional-dependencies]
# 中国市场数据接口（联网抓取，按需 `uv sync --extra data` 安装）
data = [
    "akshare>=1.14",     # A股/期货/基金/宏观，免注册（本书主线数据源）
    "tushare>=1.4",      # 需要 token 与积分（标签页对比）
    "baostock>=0.8",     # 免费历史行情（标签页对比）
    "requests>=2.31",
]
# 量化回测框架（主线 akquant，第16章），按需 `uv sync --extra quant`
quant = [
    "akquant>=0.2",      # akshare 生态的事件驱动回测框架（Rust 内核，本书主线）
]
# 对比用回测框架（第16章标签页对比），按需 `uv sync --extra compare`
compare = [
    "backtrader>=1.9",   # 社区最广的事件驱动回测框架
    "vectorbt>=0.26",    # 向量化回测，适合大规模参数扫描
]
# 进阶/机器学习章节（第19章），按需 `uv sync --extra advanced`，避免新生一上来装太重
advanced = [
    "lightgbm>=4.3",     # 梯度提升树，因子/选股建模
    "xgboost>=2.0",
]

# 成书与 notebook 导出工具链：作为 dependency-group，默认安装（见下方 default-groups）
[dependency-groups]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-print-site-plugin>=2.5",  # 合并全书为单页，供浏览器打印 PDF
    "jupyter>=1.0",
    "jupyterlab>=4.2",
    "nbconvert>=7.16",
    "nbformat>=5.10",
    "jupytext>=1.16",    # notebook <-> md 互转，便于版本管理
]
# 测试与代码质量工具
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.uv]
# 默认即包含 docs 工具链与测试工具，方便边写边预览
default-groups = ["docs", "dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qfin"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"   # 兼容下限；实际运行用 3.14

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "D"]
# D400/D415：中文 docstring 以「。」结尾，ruff 误判为缺英文句点，故豁免
# D203/D212：与 D211/D213 冲突的可选规则
ignore = ["D203", "D212", "D400", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# 测试函数无需 docstring；断言式测试可省返回注解
"tests/*" = ["D100", "D103"]
